--- a/Práctica 5 - Ampliación CRUD/Actividad3.html
+++ b/Práctica 5 - Ampliación CRUD/Actividad3.html
@@ -134,7 +134,7 @@
 
 
 <center><br>
-<!-- Boton que muestra el modal de la practica II -->
+<!-- Boton que muestra el modal de la practica V -->
 <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal3">
   Práctica v - CRUD
 </button>
